@@ -111,6 +111,7 @@ enum KeyboardShortcut
     SHORTCUT_DECREASE_Y_COORD,
     SHORTCUT_INCREASE_ELEM_HEIGHT,
     SHORTCUT_DECREASE_ELEM_HEIGHT,
+    SHORTCUT_TOGGLE_CLEARANCE_CHECKS,
 
     SHORTCUT_COUNT,
 
