@@ -7,6 +7,7 @@
 - Feature: [#11231] Change shortcut window list order to be more intuitive, and split it into logical sections.
 - Feature: [#11306] Path additions are now kept when replacing the path.
 - Feature: [#11320] Support for custom JavaScript plugins.
+- Feature: [#11422] Added a shortcut key for disabling/enabling clearance checks.
 - Feature: [#11788] Command to extract images from a .DAT file.
 - Change: [#11209] Warn when user is running OpenRCT2 through Wine.
 - Change: [#11358] Switch copy and paste button positions in tile inspector.
